# TREC-PORTALvsINRIX-MMD

./: README.md  create_portal_inrix_sjoin.py  keops_mmd.py  mmd_spatial_features.py  mmd_time_features.py  pyproject.toml  unfiltered_mmd_time_features.py
results/mmds/: 2019-spatial_features-2019_portal_inrix_spatial_join_hungarian_ids_only-mask-500_perms-250911-2144.csv  2019-spatial_features-2019_portal_inrix_spatial_join_hungarian_ids_only-zfill-500_perms-250911-2142.csv  2019-spatial_features-2019_portal_inrix_spatial_join_hungarian_ids_only-zfill_mask-500_perms-250911-2146.csv  2019-time_features_unfiltered-mask-500_perms-250904-1305.csv  2019-time_features_unfiltered-zfill-500_perms-250904-1305.csv  2019-time_features_unfiltered-zfill_mask-500_perms-250904-1305.csv  2019_portal_time_features_sjoin_2023_filtered+2019_inrix_time_features_sjoin_2023_filtered-mask-500_perms-250904-1052.csv  2019_portal_time_features_sjoin_2023_filtered+2019_inrix_time_features_sjoin_2023_filtered-zfill-500_perms-250904-1050.csv  (+58 more)
spatial_mappings/: 2019_portal_inrix_spatial_join_hungarian.csv  2019_portal_inrix_spatial_join_hungarian_ids_only.csv  2020_portal_inrix_spatial_join_hungarian.csv  2020_portal_inrix_spatial_join_hungarian_ids_only.csv  2021_portal_inrix_spatial_join_hungarian.csv  2021_portal_inrix_spatial_join_hungarian_ids_only.csv  2022_portal_inrix_spatial_join_hungarian.csv  2022_portal_inrix_spatial_join_hungarian_ids_only.csv  2023_portal_inrix_spatial_join_hungarian.csv  2023_portal_inrix_spatial_join_hungarian_ids_only.csv
