[project]
name = "TREC-PORTALvsINRIX-MMD"
version = "0.1.0"
description = "A project for computing MMD between PORTAL and INRIX travel time distributions."
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "geopandas>=0.14.0",
    "scipy>=1.10.0",
    "ipython==8.32",
    "torch>=2.0.0",
    "tqdm>=4.67.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pykeops>=2.3",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pandas-stubs>=2.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
